# PyBodyTrack

./: .gitignore  README.md  a_test_processors.py  prueba_Experimento1.py  pyproject.toml  requirements.txt  setup.py  test_processors.py
.github/workflows/: publish-to-pypi.yml
docs/source/: conf.py  index.rst  pybodytrack.enums.rst  pybodytrack.observer.rst  pybodytrack.pose_estimators.rst  pybodytrack.posetracker.rst
examples/example_1/: analyze_experiment1.py  experiment1.json  prueba_Experimento1.py
examples/example_2/: example2listing.py  experiment2.json  prueba_Experimento2.py
examples/example_3/: analyze_experiment3.py  prueba_Experimento3.py  prueba_Experimento3listing.py  prueba_Experimentolisting.py
examples/example_4/: analyze_experiment4.py  experiment4.json  prueba_Experimento4.py
pybodytrack/: BodyTracking.py  methods.py  tracking.py  utils.py
pybodytrack/bodyparts/: body_parts.py
pybodytrack/enums/: PoseProcessor.py  VideoMode.py
pybodytrack/methods/: methods.py
pybodytrack/observer/: Message.py  Observer.py
pybodytrack/pose_estimators/: camera_pose_tracker.py  mediapipe_processor.py  openpose_processor.py  yolo_processor.py
pybodytrack/posetracker/: pose_tracker.py
pybodytrack/processors/: camera_pose_tracker.py  humanposeprocessor.py  mediapipe_processor.py  openpose_processor.py  yolo_processor.py
pybodytrack/utils/: movement_observer.py  utils.py
tests/: test_tracking.py
